--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@vueuse/core": "^13.0.0",
+    "axios": "^1.8.4",
     "core-js": "^3.36.0",
     "vue": "^3.3.13",
     "vue-router": "^4.5.0"
