--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "gabrielcodes-portfolio",
   "version": "1.0.0",
+  "description": "API backend para el portafolio de Gabriel",
   "private": true,
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "start": "node server.js",
+    "dev:server": "node --watch server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -15,9 +19,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@google-analytics/data": "^3.2.0",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
     "core-js": "^3.36.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "vue": "^3.3.13",
     "vue-router": "^4.5.0"
   },
