--- a/package.json
+++ b/package.json
@@ -20,20 +20,24 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@google-analytics/data": "^3.2.0",
-    "@vueuse/core": "^13.0.0",
+    "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
     "core-js": "^3.36.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "gsap": "^3.12.7",
     "pinia": "^3.0.1",
+    "three": "^0.175.0",
     "vue": "^3.3.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/three": "^0.175.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
+    "sass-embedded": "^1.86.3",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^1.0.0"
   }
