--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gsap": "^3.12.7",
+    "lucide-vue-next": "^0.507.0",
     "pinia": "^3.0.1",
     "three": "^0.175.0",
     "vue": "^3.3.13",
