--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@google-analytics/data": "^3.2.0",
     "@vueuse/core": "^13.9.0",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "core-js": "^3.36.0",
     "cors": "^2.8.5",
